# crypto-arb-bot-india

./: .env.example  .gitignore  CMakeLists.txt  deploy_remote.sh  patch_websocketpp.py  restart_frontend.sh
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake
config/: config.json
dashboard/: app.py  requirements.txt  ws_receiver.py
dashboard/components/: balance_chart.py  spread_heatmap.py  trade_table.py
dashboard/pages/: backtest.py  balances.py  live_trades.py  pnl.py  spreads.py
data/: backtest_results.json
docker/: Dockerfile.backend  Dockerfile.dashboard  docker-compose.yml
scripts/: deploy_gcp.sh  generate_mock_data.py  setup_env.sh
src/: CMakeLists.txt  main.cpp
src/backtest/: backtest_engine.cpp  backtest_engine.h  backtest_report.cpp  backtest_report.h  data_loader.cpp  data_loader.h  simulated_exchange.cpp  simulated_exchange.h
src/common/: config.cpp  config.h  crypto_utils.cpp  crypto_utils.h  logger.cpp  logger.h  time_utils.cpp  time_utils.h  types.h
src/exchange/: exchange_factory.cpp  exchange_factory.h  exchange_interface.h  rest_client.cpp  rest_client.h  ws_client.cpp  ws_client.h
src/exchange/binance/: binance_adapter.cpp  binance_adapter.h  binance_auth.cpp  binance_auth.h  binance_rest.cpp  binance_rest.h  binance_ws.cpp  binance_ws.h
src/exchange/bybit/: bybit_adapter.cpp  bybit_adapter.h  bybit_auth.cpp  bybit_auth.h  bybit_rest.cpp  bybit_rest.h  bybit_ws.cpp  bybit_ws.h
src/exchange/coinbase/: coinbase_adapter.cpp  coinbase_adapter.h  coinbase_auth.cpp  coinbase_auth.h  coinbase_rest.cpp  coinbase_rest.h  coinbase_ws.cpp  coinbase_ws.h
src/exchange/gateio/: gateio_adapter.cpp  gateio_adapter.h  gateio_auth.cpp  gateio_auth.h  gateio_rest.cpp  gateio_rest.h  gateio_ws.cpp  gateio_ws.h
src/exchange/kraken/: kraken_adapter.cpp  kraken_adapter.h  kraken_auth.cpp  kraken_auth.h  kraken_rest.cpp  kraken_rest.h  kraken_ws.cpp  kraken_ws.h
src/exchange/mexc/: mexc_adapter.cpp  mexc_adapter.h  mexc_auth.cpp  mexc_auth.h  mexc_rest.cpp  mexc_rest.h  mexc_ws.cpp  mexc_ws.h
src/exchange/okx/: okx_adapter.cpp  okx_adapter.h  okx_auth.cpp  okx_auth.h  okx_rest.cpp  okx_rest.h  okx_ws.cpp  okx_ws.h
src/execution/: execution_engine.cpp  execution_engine.h  inventory_tracker.cpp  inventory_tracker.h  order_manager.cpp  order_manager.h  paper_executor.cpp  paper_executor.h
src/orderbook/: depth_analyzer.cpp  depth_analyzer.h  order_book.cpp  order_book.h  order_book_aggregator.cpp  order_book_aggregator.h
src/persistence/: trade_logger.cpp  trade_logger.h
src/server/: broadcast_queue.cpp  broadcast_queue.h  message_types.cpp  message_types.h  ws_server.cpp  ws_server.h
src/strategy/: fee_manager.cpp  fee_manager.h  spread_detector.cpp  spread_detector.h
tests/: CMakeLists.txt  test_broadcast_queue.cpp  test_depth_analyzer.cpp  test_order_book.cpp  test_paper_executor.cpp  test_spread_detector.cpp  test_trade_logger.cpp
